// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors if the event has no bucket name 1`] = `
"[
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "detail",
      "s3ObjectDetails",
      "bucketName"
    ],
    "message": "Required"
  }
]"
`;

exports[`errors if the event has no object key 1`] = `
"[
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "detail",
      "s3ObjectDetails",
      "objectKey"
    ],
    "message": "Required"
  }
]"
`;

exports[`errors if the event has no object version-id 1`] = `
"[
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "detail",
      "s3ObjectDetails",
      "versionId"
    ],
    "message": "Required"
  }
]"
`;

exports[`errors if the event has no scanResultStatus 1`] = `
"[
  {
    "expected": "'NO_THREATS_FOUND'",
    "received": "undefined",
    "code": "invalid_type",
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Required"
  }
]"
`;

exports[`errors if the event has object tag GuardDutyMalwareScanStatus with value ACCESS_DENIED 1`] = `
"[
  {
    "received": "ACCESS_DENIED",
    "code": "invalid_enum_value",
    "options": [
      "NO_THREATS_FOUND"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid enum value. Expected 'NO_THREATS_FOUND', received 'ACCESS_DENIED'"
  }
]"
`;

exports[`errors if the event has object tag GuardDutyMalwareScanStatus with value FAILED 1`] = `
"[
  {
    "received": "FAILED",
    "code": "invalid_enum_value",
    "options": [
      "NO_THREATS_FOUND"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid enum value. Expected 'NO_THREATS_FOUND', received 'FAILED'"
  }
]"
`;

exports[`errors if the event has object tag GuardDutyMalwareScanStatus with value THREATS_FOUND 1`] = `
"[
  {
    "received": "THREATS_FOUND",
    "code": "invalid_enum_value",
    "options": [
      "NO_THREATS_FOUND"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid enum value. Expected 'NO_THREATS_FOUND', received 'THREATS_FOUND'"
  }
]"
`;

exports[`errors if the event has object tag GuardDutyMalwareScanStatus with value UNSUPPORTED 1`] = `
"[
  {
    "received": "UNSUPPORTED",
    "code": "invalid_enum_value",
    "options": [
      "NO_THREATS_FOUND"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid enum value. Expected 'NO_THREATS_FOUND', received 'UNSUPPORTED'"
  }
]"
`;
